# atc-sample

IRBuild/: Makefile  main.cpp
IRBuild/data/: caffe_generate.py  tensorflow_generate.py
op/all/: CMakeLists.txt  build.sh  custom.proto
op/all/cmake/util/: aicpu_parser_ini.py  parse_ini_to_json.py
op/all/cpukernel/: CMakeLists.txt
op/all/cpukernel/impl/: reshape_cust_kernels.cc
op/all/framework/caffe_plugin/: CMakeLists.txt  caffe_conv2d_tik_plugin.cpp  caffe_leaky_relu_plugin.cpp
op/all/framework/tf_plugin/: CMakeLists.txt  scatter_nd_add_plugin.cpp
op/all/framework/tf_scope_fusion_pass/: decode_bbox_v2_scope_fusion_pass.cpp
op/all/op_proto/: CMakeLists.txt  conv2d_tik.h  matmul_tik.cpp  reshape_cust.cpp  reshape_cust.h  scatter_nd_add.cpp
op/all/tbe/impl/: add.py  conv2d_tik.py  matmul_tik.py  scatter_nd_add.py
op/caffe/: CMakeLists.txt  build.sh
op/caffe/cmake/: config.cmake
op/caffe/framework/: CMakeLists.txt
op/caffe/framework/caffe_plugin/: CMakeLists.txt  caffe_permute_tik_plugin.cpp
op/caffe/op_proto/: conv2d_tik.cpp  leaky_relu_demo.cpp  leaky_relu_demo.h  matmul_tik.h  permute_tik.cpp  upsample_tik.cpp
op/caffe/scripts/: install.sh
op/caffe/tbe/: CMakeLists.txt
op/caffe/tbe/impl/: conv2d_tik.py  matmul_tik.py  permute_tik.py  upsample_tik.py
op/tensorflow/: CMakeLists.txt
op/tensorflow/cmake/: config.cmake
op/tensorflow/framework/: CMakeLists.txt
op/tensorflow/framework/tf_plugin/: CMakeLists.txt  add_plugin.cpp  decode_bbox_v2_scope_fussion_plugin.cpp
op/tensorflow/op_proto/: add.cpp
(+5 files in other folders)
